fix heritage overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,7 @@
 @media (max-width: 1024px) {
   .mobile-bg {
     background-image: url('/images/frame7.5.svg');
+    background-position: 1%;
   }
 }
 @layer base {
